tests/samples/0003/error.txt
error[P0042]: unexpected token `[`, expected an expression
  --> 0003/code.ara:5:10
  |
5 |     $a = [
  |          ^ unexpected token `[`, expected an expression

